--- a/index-landing.html
+++ b/index-landing.html
@@ -395,21 +395,16 @@
     /* ------------------------------ */
     /* VIDEO HERO COMPLETO */
     /* ------------------------------ */
-    .hero-video {
-      position: relative;
-      width: 100%;
-      height: 80vh;
-      /* antes: 70vh */
-      overflow: hidden;
-    }
-
-
-    .hero-video video {
-      width: 100%;
-      height: 100%;
-
-    }
-       
+    .hero-video { 
+      position: relative; 
+      width: 100%; 
+      height: auto; /* antes: 70vh */ 
+      overflow: hidden; } 
+      
+      .hero-video video { 
+        width: 100%; 
+        height: 100%;
+       }
 
     .overlay-text {
       position: absolute;
